js/src/tests/test262/built-ins/Error/S15.11.2.1_A3_T1.js
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
var
err1
=
new
Error
(
)
;
if
(
err1
.
toString
(
)
!
=
=
'
[
object
'
+
'
Error
'
+
'
]
'
)
{
ERROR
(
'
#
1
:
err1
.
toString
(
)
=
=
=
\
'
[
object
Error
]
\
'
.
Actual
:
'
+
err1
.
toString
(
)
)
;
}
reportCompare
(
0
0
)
;
